[gd_scene load_steps=16 format=3 uid="uid://dmneid2hxgmft"]

[ext_resource type="Script" path="res://Animals/GP/DogChase.gd" id="1_v88ws"]
[ext_resource type="Script" path="res://Minigames/ChasedPosition.gd" id="8_2dufi"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4uf1u"]
load_path = "res://.godot/imported/opossum-1.png-27609fbd82fa74fd7acf2f5e1c10ce69.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s24qs"]
load_path = "res://.godot/imported/opossum-2.png-8a042589bb444a8b641dc2af13d69011.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ujklf"]
load_path = "res://.godot/imported/opossum-3.png-5d8113335213f7d2a3acb31c558baad1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mp5de"]
load_path = "res://.godot/imported/opossum-4.png-e887b8827813ed230a69d139c17938cd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rxlre"]
load_path = "res://.godot/imported/opossum-5.png-915e9230f84aa9a07989dffbe6f981cd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v5u1w"]
load_path = "res://.godot/imported/opossum-6.png-61871f2c3dee47d7572e14c7987e6713.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_qb8e0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_4uf1u")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_4uf1u")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_s24qs")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_ujklf")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_mp5de")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_rxlre")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_v5u1w")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fjh33"]
radius = 14.0

[sub_resource type="Animation" id="Animation_rkm8v"]
resource_name = "GPRun"

[sub_resource type="Animation" id="Animation_qhjsv"]
length = 0.001

[sub_resource type="Animation" id="Animation_58hr4"]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DogChaseSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bixwr"]
_data = {
"GPRun": SubResource("Animation_rkm8v"),
"RESET": SubResource("Animation_qhjsv"),
"Run": SubResource("Animation_58hr4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6j7u1"]
radius = 175.183

[node name="DogChase" type="CharacterBody2D"]
script = ExtResource("1_v88ws")

[node name="DogChaseSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qb8e0")
animation = &"Run"
frame = 1
flip_h = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CircleShape2D_fjh33")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bixwr")
}

[node name="Player_Detection" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detection"]
position = Vector2(4, 5)
shape = SubResource("CircleShape2D_6j7u1")

[node name="ChasedPosition" type="Node2D" parent="."]
script = ExtResource("8_2dufi")

[connection signal="body_entered" from="Player_Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player_Detection" to="." method="_on_player_detection_body_exited"]
